[tool.poetry]
name = "comfyui-server"
version = "0.1.0"
description = ""
authors = ["fanxingkun <fanxingkun@looki.ai>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
aio-pika = "9.4.3"
aiobotocore = "2.15.2"
aiofiles = "24.1.0"
aiohappyeyeballs = "2.4.3"
aiohttp = "3.11.2"
aioitertools = "0.12.0"
aiormq = "6.8.1"
aiosignal = "1.3.1"
annotated-types = "0.7.0"
anyio = "4.6.2.post1"
attrs = "24.2.0"
botocore = "1.35.36"
certifi = "2024.8.30"
click = "8.1.7"
dnspython = "2.7.0"
email-validator = "2.2.0"
fastapi = "0.115.4"
fastapi-cli = "0.0.5"
frozenlist = "1.5.0"
greenlet = "3.1.1"
h11 = "0.14.0"
httpcore = "1.0.6"
httptools = "0.6.4"
httpx = "0.27.2"
idna = "3.10"
jinja2 = "3.1.4"
jmespath = "1.0.1"
markdown-it-py = "3.0.0"
markupsafe = "3.0.2"
mdurl = "0.1.2"
multidict = "6.1.0"
pamqp = "3.3.0"
propcache = "0.2.0"
psycopg = "3.2.3"
psycopg-binary = "3.2.3"
pydantic = "2.9.2"
pydantic-core = "2.23.4"
pygments = "2.18.0"
python-dateutil = "2.9.0.post0"
python-dotenv = "1.0.1"
python-multipart = "0.0.17"
pyyaml = "6.0.2"
rich = "13.9.4"
shellingham = "1.5.4"
six = "1.16.0"
sniffio = "1.3.1"
sqlalchemy = "2.0.36"
starlette = "0.41.2"
typer = "0.12.5"
typing-extensions = "4.12.2"
urllib3 = "2.2.3"
uvicorn = "0.32.0"
uvloop = "0.21.0"
watchfiles = "0.24.0"
websockets = "13.1"
wrapt = "1.16.0"
yarl = "1.17.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
